bullets fixed, alignment fixed

--- a/css/position/style.css
+++ b/css/position/style.css
@@ -15,6 +15,14 @@ background-color:#516BEB;
 	font-family:calibri;
 }
 
+.bg-graphics{
+	border-width:0.5px;
+	margin-top:30px;
+	margin-left:30px;
+	margin-right:30px;
+
+}
+
 .section1{
     border-width:0.5px;
 	margin-top:30px;
@@ -92,7 +100,7 @@ margin-top:20px;
 	padding-right:30px;
 	padding-bottom:10px;
 	margin-left:20px;
-	 opacity: 0.9;
+	
 }
 	.grid-container {
   display: grid;
@@ -123,9 +131,11 @@ margin-top:20px;
 	padding-left:15px;
   }
   .item{
-  	 
+	display:grid;
+	grid-template-columns: auto auto;	  
+	justify-content: center;
 	  font-size:14px;
-	  text-align:center;
+	  align-items: center;
 	  
   }
 
@@ -138,14 +148,18 @@ margin-top:20px;
  
   .small-grid{
   	  display:grid;
-	  grid-template-columns: auto auto;
-	  
-	  
-	  
+	  grid-template-columns: auto auto;	  
+	  justify-content: start;
   }
+
   #box{
-  	  background-color: #2196F3;
 	  border-radius:6px;
+	  width:18px;
+	  height:18px;
 	   }
+
+	#box-item{
+		margin-inline:8px;
+	}
 
 	   
